--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_vehicle_configuration">VehicleConfiguration</string>
+    <string name="title_activity_route_map">RouteMap</string>
 
 </resources>
