--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_vehicle_configuration">VehicleConfiguration</string>
     <string name="title_activity_route_map">RouteMap</string>
+    <string name="title_activity_trip_history">TripHistory</string>
 
 </resources>
