--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <string name="title_activity_vehicle_configuration">VehicleConfiguration</string>
     <string name="title_activity_route_map">RouteMap</string>
     <string name="title_activity_trip_history">TripHistory</string>
+    <string name="title_activity_trip_detail">TripDetail</string>
 
 </resources>
