Added stub for SQLlite database (not connected to anything yet)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="title_activity_route_map">RouteMap</string>
     <string name="title_activity_trip_history">TripHistory</string>
     <string name="title_activity_trip_detail">TripDetail</string>
+    <string name="db_name">COMMUTILATOR.db</string>
 
 </resources>
